# gated-token-pool

./: Anchor.toml  Cargo.toml  README.md  balance_watcher.sh
app/client/: Cargo.toml
app/client/src/: buy.rs  create_authorization.rs  create_pool.rs  deposit.rs  main.rs  pubkey_cli.rs  withdraw.rs
programs/gated-token-sale/: Cargo.toml  idl.json
programs/gated-token-sale/src/: lib.rs
programs/gated-token-sale/src/instructions/: add_buy_authorization.rs  buy.rs  create_pool.rs  deposit.rs  mod.rs  withdraw.rs
programs/gated-token-sale/src/state/: authorization.rs  gated_token_pool.rs  mod.rs
tests/: gated-token-sale.ts
