[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["Serge Farny <serge.farny@gmail.com>"]

[dependencies]
anchor-client = "0.30.1"
anchor-spl = "0.30.1"
clap = { version = "4.4.18" , features = ["derive"]}
anyhow = "1.0.32"
gated-token-sale = { path = "../../programs/gated-token-sale", features = ["no-entrypoint"] }
